# viam-viz-helpers-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_anim_helpers.py  test_lerp_pose.py  test_registry.py  test_scene.py  test_visuals.py
viam_visuals/: __init__.py  anim_helpers.py  animations.py  basic_geometry.py  color.py  composites.py  pose.py  registry.py  scene.py  service.py  shapes.py  uuid_strategy.py
viam_visuals/_internal/: __init__.py  constants.py  mesh.py  metadata.py  pcd.py
